# WifiEncryptionSimulation

./: CMakeLists.txt  README.md  describe.txt
26.4/Client/Client/: AES-CCMP.h  AES.cpp  AES.h  Client.rc  Client.vcxproj  Client.vcxproj.filters  ClientDlg.cpp  ClientDlg.h  Utilities.h  resource.h
26.4/Sever/Server/: Server.rc  ServerDlg.cpp
Client/Client/: AES-CCMP.cpp  AES.cpp  CBC.cpp  Client.aps  Client.vcxproj  ClientDlg.cpp  ClientDlg.h  WEP.h
Hoàng_end/Client/Client/: AES-CCMP.h  Client.aps  Client.h  Client.vcxproj.filters  ClientDlg.cpp  ClientDlg.h  WEP.h
Hoàng_end/Sever/Server/: Server.aps  ServerDlg.h
Sever/Server/: Server.aps  Server.rc  Server.vcxproj  ServerDlg.cpp  ServerDlg.h  resource.h
WEP/: WEP.sln
WEP/WEP/: Main.cpp  WEP.vcxproj
WEP/WEP/x64/Debug/: WEP.exe.recipe  WEP.ilk  vc143.idb
WEP/WEP/x64/Debug/WEP.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  WEP.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/Client/: CMakeLists.txt  SocketClient.h  main.cpp
src/Server/: CMakeLists.txt  ServerGUI.h  SocketServer.h  main.cpp
Đăng_end/Client/Client/: AES-CCMP.cpp  AES-CCMP.h  AES.cpp  AES_Tables.h  Client.aps  Client.rc  Client.vcxproj  Client.vcxproj.filters  ClientDlg.cpp  ClientDlg.h  WEP.cpp  WEP.h
Đăng_end/Sever/Server/: Account.txt  Server.aps  Server.rc  ServerDlg.cpp  ServerDlg.h  resource.h
